--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
 }
 
 .h1-titulo-label {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   position: absolute;
@@ -127,7 +127,7 @@ html body .header .nav .col1 .img-perfil {
 }
 
 html body .header .nav .col1 .saudacao-perfil {
-  margin: 10px 0 0 130px;
+  margin: 0 0 0 130px;
   font-family: "Poppins", sans-serif;
 }
 
@@ -298,7 +298,9 @@ html body .main .section .h1-titulo-label {
 html body .main .section .article {
   -ms-grid-column: 1;
   grid-column: 1;
-  height: calc(100vh- 150px);
+  height: 100%;
+  min-height: 95%;
+  max-height: calc(100px - 250px);
   width: inherit;
   display: -ms-grid;
   display: grid;
@@ -306,12 +308,13 @@ html body .main .section .article {
       grid-template-columns: 1fr 1fr;
   border-radius: 10px;
   gap: 30px;
-  padding: 30px 20px 30px 30px;
+  padding: 40px 20px 30px 30px;
 }
 
 html body .main .section .article .projects {
   width: 100%;
-  height: 150px;
+  height: 100%;
+  max-height: 200px;
   background: white;
   border-radius: 10px;
   -webkit-box-shadow: 2px 3px 11px 1px;
@@ -348,7 +351,11 @@ html body .main .section .article .projects .links {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
-  margin-top: 20px;
+  bottom: 20px;
+  position: absolute;
+  border: 1px solid red;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 html body .main .section .article .projects .links a {
@@ -375,6 +382,11 @@ html body .main .section .aside-right {
   position: relative;
 }
 
+html body .main .section .aside-right .h1-titulo-label {
+  top: -15px;
+  left: 0;
+}
+
 html body .main .section .aside-right .hr {
   width: 100%;
   border-width: 1px;
@@ -391,6 +403,7 @@ html body .main .section .aside-right .announcements, html body .main .section .
   padding: 10px;
   font-family: "Poppins", sans-serif;
   background: white;
+  height: 90%;
 }
 
 html body .main .section .aside-right .announcements a, html body .main .section .aside-right .trending a {
@@ -420,7 +433,7 @@ html body .main .section .aside-right .announcements {
   -ms-grid-row: 1;
   grid-row: 1;
   width: 100%;
-  height: 100%;
+  margin-top: 20px;
   border-radius: 10px;
   -webkit-box-shadow: 2px 3px 11px 1px;
           box-shadow: 2px 3px 11px 1px;
@@ -436,7 +449,8 @@ html body .main .section .aside-right .trending {
   width: 100%;
   -ms-grid-row: 2;
   grid-row: 2;
-  height: 100%;
+  position: relative;
+  margin-top: 10px;
   border-radius: 10px;
   -webkit-box-shadow: 2px 3px 11px 1px;
           box-shadow: 2px 3px 11px 1px;
@@ -451,7 +465,7 @@ html body .main .section .aside-right .trending {
 }
 
 html body .main .section .aside-right .trending .h1-titulo-label {
-  top: 297px;
+  top: -35px;
 }
 
 html body .main .section .aside-right .trending .container-trending .user-trending {
