--- a/css/style.scss
+++ b/css/style.scss
@@ -60,7 +60,7 @@ width:70px;
 }
 
 .h1-titulo-label{
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-family: $ff-ubuntu;
     font-weight: $fw-500;
     position: absolute;
@@ -121,7 +121,7 @@ html{
                     }
 
                     .saudacao-perfil{
-                        margin: 10px 0 0 130px; 
+                        margin: 0 0 0 130px; 
                         font-family: $ff-ubuntu;
 
                         span{
@@ -282,7 +282,9 @@ html{
                     .article{
                         grid-column: 1;
                         
-                        height:calc(100vh- 150px);
+                        height:100%;
+                        min-height: 95%;
+                        max-height: calc(100px - 250px);
                         width: inherit;
                         display:grid;
                         grid-template-columns: 1fr 1fr;
@@ -291,12 +293,13 @@ html{
                         
                         
                         gap:30px;
-                        padding: 30px 20px 30px 30px ;
+                        padding: 40px 20px 30px 30px ;
 
                             .projects{
                                 
                                 width:100%;
-                                height:150px;
+                                height:100%;
+                                max-height: 200px;
                                 background: white;
                                 border-radius: $border-radius;
                                 box-shadow: $box-shadow;
@@ -327,7 +330,11 @@ html{
                                     display: flex;
                                     width: 100%;
                                     justify-content: end;
-                                    margin-top: 20px;
+                                    bottom:20px;
+                                    position: absolute;
+                                    border:1px solid red;
+                                    align-self: center;
+
 
                                     a{
                                         color:var(--t2_clr4);
@@ -353,7 +360,10 @@ html{
                         //padding:30px;
 
                         position: relative;
-
+                        .h1-titulo-label{
+                            top:-15px;
+                            left:0;
+                        }
                             
                         .hr{
                             width:100%;
@@ -368,6 +378,7 @@ html{
                             padding: 10px;
                             font-family: $ff-ubuntu;
                             background: white;
+                            height:90%;
                             
 
                             a{
@@ -392,8 +403,8 @@ html{
                                 grid-column: 1;
                                 grid-row: 1;
                                 width: 100%;
+                                margin-top:20px;
                                 
-                                height: 100%;
                                 border-radius: $border-radius;
                                 box-shadow: $box-shadow;
 
@@ -406,12 +417,13 @@ html{
                             .trending{
 
                                 .h1-titulo-label{
-                                    top:297px;
+                                    top:-35px;
                                 }
                                 grid-column: 1;
                                 width: 100%;
                                 grid-row: 2;
-                                height: 100%;
+                                position:relative;
+                                margin-top:10px;
                                 
                                 border-radius: $border-radius;
                                 box-shadow: $box-shadow;
